--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@date-io/moment": "1.3.13",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/pickers": "3.2.10",
+    "@syncfusion/ej2-react-schedule": "18.4.30",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "axios": "0.21.0",
+    "moment": "2.29.1",
+    "react": "17.0.1",
+    "react-calendar": "3.2.1",
+    "react-dom": "17.0.1",
+    "react-event-calendar": "0.3.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
